# typeful

./: Cargo.toml  README.md
examples/: array.rs
src/: common.rs  lib.rs
